# nmtc-calc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: health_center_deal_demo.ipynb
nmtccalc/: __init__.py
nmtccalc/data/: schema.py
nmtccalc/models/: credits.py  investor.py  subsidy.py  transaction.py  waterfall.py
nmtccalc/utils/: __init__.py
tests/: conftest.py  test_credits.py  test_investor.py  test_sensitivity.py  test_subsidy.py  test_transaction.py  test_waterfall.py
