[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmtc-calc"
version = "0.1.0"
description = "Python calculator for New Markets Tax Credit (NMTC) leveraged transactions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.4.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "ipykernel"]

[project.urls]
Homepage = "https://github.com/Jaypatel1511/nmtc-calc"
